--- a/IMDB_Assignment_Asmeet.ipynb
+++ b/IMDB_Assignment_Asmeet.ipynb
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f1d1de3b",
+   "id": "d63860c6",
    "metadata": {},
    "outputs": [
     {
@@ -50,13 +50,14 @@
     }
    ],
    "source": [
+    "#Import the dataset and get the columns present\n",
     "df = pd.read_csv(\"imdb.csv\")\n",
     "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "dc33fcd6",
    "metadata": {},
    "outputs": [
@@ -64,7 +65,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "No. of uniques genres is:\n",
       "26\n",
+      "Unique genre sorted in ascending order:\n",
       "['action', 'adventure', 'animation', 'biography', 'comedy', 'crime', 'documentary', 'drama', 'family', 'fantasy', 'filmnoir', 'gameshow', 'history', 'horror', 'music', 'musical', 'mystery', 'news', 'realitytv', 'romance', 'scifi', 'short', 'sport', 'thriller', 'war', 'western']\n"
      ]
     },
@@ -72,15 +75,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/2f/4n9l1s8x6nqf50p8qj8j0cz80000gn/T/ipykernel_87011/1108901083.py:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "/var/folders/2f/4n9l1s8x6nqf50p8qj8j0cz80000gn/T/ipykernel_87011/1399039298.py:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  unique_genres = set(df['genre'].str.replace('[^a-zA-Z ]', '').str.lower().str.split(' ').sum())\n"
      ]
     }
    ],
    "source": [
     "unique_genres = set(df['genre'].str.replace('[^a-zA-Z ]', '').str.lower().str.split(' ').sum())\n",
+    "print('No. of uniques genres present is:') \n",
     "print(len(unique_genres))\n",
-    "print(list(sorted(unique_genres)))"
+    "print('Unique genre sorted in ascending order:')\n",
+    "print(list(sorted(unique_genres)))\n",
+    "# 26 unique genres :\n",
+    "#'action', 'adventure', 'animation', 'biography', 'comedy', 'crime', 'documentary', 'drama',\n",
+    "#'family', 'fantasy', 'filmnoir', 'gameshow', 'history', 'horror', 'music', 'musical', 'mystery',\n",
+    "#'news', 'realitytv', 'romance', 'scifi', 'short', 'sport', 'thriller', 'war', 'western'"
    ]
   },
   {
@@ -93,32 +102,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "42c5d9ce",
+   "execution_count": 36,
+   "id": "d79ce4bc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max votes = 99981\n"
+      "Max votes = 99981\n",
+      "6443    Most voted movie is = Running Scared\n",
+      "Name: name, dtype: object\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "6443    Running Scared\n",
-       "Name: name, dtype: object"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "print('Max votes = ' + df['votes'].max())\n",
-    "df[df['votes'] == df.max()['votes']].name"
+    "movieName = df[df['votes'] == df.max()['votes']].name\n",
+    "print('Most voted movie is = ' + movieName) \n",
+    "#'Running Scared' with 99981 votes"
    ]
   },
   {
@@ -157,7 +159,7 @@
     "genres_with_movie_count = Counter(list1)\n",
     "print('All Genres with their movies counts are : ')\n",
     "print(genres_with_movie_count)\n",
-    "# drama has the most number of movies - 9928"
+    "# 'Drama' has the most number of movies - 9928"
    ]
   },
   {
@@ -192,9 +194,7 @@
     "plt.rcParams[\"figure.autolayout\"] = True\n",
     "plt.bar(genres_with_movie_count.keys(), genres_with_movie_count.values())\n",
     "\n",
-    "plt.show()\n",
-    "# TODO: fix the saving part later\n",
-    "# plt.savefig('NoOfMoviesInGenres.jpg')"
+    "plt.show()"
    ]
   },
   {
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "afaf9724",
+   "id": "59155d5d",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d3e99c4b",
+   "id": "54201a49",
    "metadata": {},
    "outputs": [
     {
@@ -366,13 +366,14 @@
     "    \n",
     "\n",
     "sorted_dict = sorted(final_dict.items(), key=lambda item: item[1], reverse=True)\n",
-    "print(sorted_dict)"
+    "print(sorted_dict)\n",
+    "# Action is the best genre with maximum gross income = 138052701745.05"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c7eefa35",
+   "id": "beeca75d",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +413,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# From the above graph 'gameshow' is the worst genre to make money for a movie"
+    "# From the above graph 'gameshow' is the worst genre to make money for a movie\n",
+    "# gross_income = 1338264.0"
    ]
   },
   {
@@ -504,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "6098b7f8",
+   "id": "07d395dc",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a57922ba",
+   "id": "1d6ffe92",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +542,7 @@
    "source": [
     "sorted_dict = sorted(final_dict.items(), key=lambda item: item[1], reverse=True)\n",
     "print(sorted_dict)\n",
-    "# Drama + Crime has the maximum no of movies"
+    "# Drama + Crime has the maximum no of movies = 3237"
    ]
   }
  ],
